--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,7 @@
     %header
       = render 'layouts/navigation'
     %main{:role => "main"}
-      = yield
+      %div.main-content-container
+        = yield
+  %footer
+    = render 'layouts/footer'
